# pyPIO

./: .envrc  .gitignore  README.md  flash.py  mpfs_icicle_kit_eclipse.py  mpfs_icicle_kit_grep_sed.py  mpfs_icicle_kit_toolchain.txt  mpfs_icicle_kit_ymodem.py  platformio.ini  pycom_lopy_mpremote.py  pyproject.toml  requirements.txt  startup.bat  startup.sh
.config/: direnvrc
src/arduino_nano/: arduino_nano_nLDR_sensors_fastLED_strip.cpp
src/examples/: arduino_nano_LDR_sensor.cpp  arduino_nano_blinky.cpp  arduino_nano_nLDR_sensors.cpp  feather_huzzah_UDPclient.cpp  feather_huzzah_blinky.c  stm32_f4_disc_blinky.cpp  uno_R4_wifi_blinky.cpp  uno_R4_wifi_fastLEDStrip.cpp
src/examples/stm32_f4_disc_HALblinky/: stm32_f4_disc_HALblinky.cpp  stm32_f4_disc_HALblinky.h  stm32f4xx_it.c
src/feather_esp32/: feather_esp32_blinky.cpp
src/feather_huzzah/: feather_huzzah_AsyncUDPclient.cpp
src/mpfs_icicle_kit/mpfs-blank-baremetal/resources/: LICENSE.md  commands.txt  hss-bm-payload-ddr.yaml  hss-bm-payload-lim.yaml  hss-payload-generator
src/pycom_lopy/: main.py
src/stm32f4_disc/: stm32_f4_disc_CMSISblinky.cpp
src/uno_R4_wifi/: uno_R4_wifi_UDPserver.cpp
